# slack-emoji-stats

./: .env.template  Dockerfile  build.sh  datadog.py  main.py  pyproject.toml  run.sh
.github/workflows/: main.yml
src/: datadog.py  main.py
