[tool.poetry]
name = "emojistat"
version = "0.1.0"
description = ""
authors = ["Kamyar Ghasemlou  <github@kamy.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
aiohttp = "^3.8.3"
datadog-api-client = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
